--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -47,6 +47,9 @@
     <Compile Include="Parser\IParser.cs" />
     <Compile Include="SyntaxTree\Abstract\CompilationUnit.cs" />
     <Compile Include="SyntaxTree\Abstract\CompilationUnitType.cs" />
+    <Compile Include="SyntaxTree\Abstract\ConstantDeclaration.cs" />
+    <Compile Include="SyntaxTree\Abstract\DeclaredSymbol.cs" />
+    <Compile Include="SyntaxTree\Abstract\DeclaredSymbols.cs" />
     <Compile Include="SyntaxTree\Abstract\ISymbolTable.cs" />
     <Compile Include="SyntaxTree\Abstract\ISymbolTableEntry.cs" />
     <Compile Include="SyntaxTree\Abstract\ProjectRoot.cs" />
@@ -71,6 +74,7 @@
     <Compile Include="SyntaxTree\Standard\LocalAsmLabel.cs" />
     <Compile Include="SyntaxTree\Standard\Parameter.cs" />
     <Compile Include="SyntaxTree\Standard\TypeName.cs" />
+    <Compile Include="SyntaxTree\Visitors\ConstMode.cs" />
     <Compile Include="SyntaxTree\Visitors\StructuralErrors.cs" />
     <Compile Include="SyntaxTree\Visitors\StructureValidator.cs" />
     <Compile Include="SyntaxTree\Visitors\StructureValidatorOptions.cs" />
