--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -50,16 +50,19 @@
     <Compile Include="SyntaxTree\Abstract\ConstantDeclaration.cs" />
     <Compile Include="SyntaxTree\Abstract\DeclaredSymbol.cs" />
     <Compile Include="SyntaxTree\Abstract\DeclaredSymbols.cs" />
+    <Compile Include="SyntaxTree\Abstract\DeclaredType.cs" />
     <Compile Include="SyntaxTree\Abstract\ISymbolTable.cs" />
     <Compile Include="SyntaxTree\Abstract\ISymbolTableEntry.cs" />
+    <Compile Include="SyntaxTree\Abstract\ISymbolWithAttributes.cs" />
     <Compile Include="SyntaxTree\Abstract\ProjectRoot.cs" />
+    <Compile Include="SyntaxTree\Abstract\SymbolAttribute.cs" />
     <Compile Include="SyntaxTree\Abstract\SymbolHints.cs" />
     <Compile Include="SyntaxTree\Abstract\SymbolName.cs" />
     <Compile Include="SyntaxTree\Abstract\SymbolTableBase.cs" />
     <Compile Include="SyntaxTree\Abstract\SymbolTableEntryBase.cs" />
     <Compile Include="SyntaxTree\Abstract\UnitMode.cs" />
-    <Compile Include="SyntaxTree\Abstract\UnitName.cs" />
-    <Compile Include="SyntaxTree\Abstract\UnitNameList.cs" />
+    <Compile Include="SyntaxTree\Abstract\RequiredUnitName.cs" />
+    <Compile Include="SyntaxTree\Abstract\RequiredUnitNameList.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\IfDirective.cs" />
     <Compile Include="SyntaxTree\Standard\AsmBlock.cs" />
     <Compile Include="SyntaxTree\Standard\AsmFactor.cs" />
@@ -74,7 +77,7 @@
     <Compile Include="SyntaxTree\Standard\LocalAsmLabel.cs" />
     <Compile Include="SyntaxTree\Standard\Parameter.cs" />
     <Compile Include="SyntaxTree\Standard\TypeName.cs" />
-    <Compile Include="SyntaxTree\Visitors\ConstMode.cs" />
+    <Compile Include="SyntaxTree\Abstract\ConstMode.cs" />
     <Compile Include="SyntaxTree\Visitors\StructuralErrors.cs" />
     <Compile Include="SyntaxTree\Visitors\StructureValidator.cs" />
     <Compile Include="SyntaxTree\Visitors\StructureValidatorOptions.cs" />
