--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -45,12 +45,15 @@
     <Compile Include="Parser\CompilerDirectiveParserErrors.cs" />
     <Compile Include="Parser\EmptyCollection.cs" />
     <Compile Include="Parser\IParser.cs" />
+    <Compile Include="SyntaxTree\Abstract\AbstractSyntaxPart.cs" />
     <Compile Include="SyntaxTree\Abstract\CompilationUnit.cs" />
     <Compile Include="SyntaxTree\Abstract\CompilationUnitType.cs" />
     <Compile Include="SyntaxTree\Abstract\ConstantDeclaration.cs" />
+    <Compile Include="SyntaxTree\Abstract\ConstExpression.cs" />
     <Compile Include="SyntaxTree\Abstract\DeclaredSymbol.cs" />
     <Compile Include="SyntaxTree\Abstract\DeclaredSymbols.cs" />
     <Compile Include="SyntaxTree\Abstract\DeclaredType.cs" />
+    <Compile Include="SyntaxTree\Abstract\ExpressionBase.cs" />
     <Compile Include="SyntaxTree\Abstract\ISymbolTable.cs" />
     <Compile Include="SyntaxTree\Abstract\ISymbolTableEntry.cs" />
     <Compile Include="SyntaxTree\Abstract\ISymbolWithAttributes.cs" />
