--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -47,15 +47,19 @@
     <Compile Include="Parser\IParser.cs" />
     <Compile Include="SyntaxTree\Abstract\AbstractSyntaxPart.cs" />
     <Compile Include="SyntaxTree\Abstract\ArrayConstant.cs" />
-    <Compile Include="SyntaxTree\Abstract\ArrayConstantItem.cs" />
+    <Compile Include="SyntaxTree\Abstract\ComparisonExpression.cs" />
+    <Compile Include="SyntaxTree\Abstract\ComparisonExpressionKind.cs" />
     <Compile Include="SyntaxTree\Abstract\CompilationUnit.cs" />
     <Compile Include="SyntaxTree\Abstract\CompilationUnitType.cs" />
     <Compile Include="SyntaxTree\Abstract\ConstantDeclaration.cs" />
+    <Compile Include="SyntaxTree\Abstract\ConstantValue.cs" />
+    <Compile Include="SyntaxTree\Abstract\ConstantValueKind.cs" />
     <Compile Include="SyntaxTree\Abstract\ConstExpression.cs" />
     <Compile Include="SyntaxTree\Abstract\DeclaredSymbol.cs" />
     <Compile Include="SyntaxTree\Abstract\DeclaredSymbols.cs" />
     <Compile Include="SyntaxTree\Abstract\DeclaredType.cs" />
     <Compile Include="SyntaxTree\Abstract\ExpressionBase.cs" />
+    <Compile Include="SyntaxTree\Abstract\ExpressionOperand.cs" />
     <Compile Include="SyntaxTree\Abstract\IExpressionTarget.cs" />
     <Compile Include="SyntaxTree\Abstract\ISymbolTable.cs" />
     <Compile Include="SyntaxTree\Abstract\ISymbolTableEntry.cs" />
@@ -85,7 +89,7 @@
     <Compile Include="SyntaxTree\Standard\LocalAsmLabel.cs" />
     <Compile Include="SyntaxTree\Standard\Parameter.cs" />
     <Compile Include="SyntaxTree\Standard\TypeName.cs" />
-    <Compile Include="SyntaxTree\Abstract\ConstMode.cs" />
+    <Compile Include="SyntaxTree\Abstract\DeclarationMode.cs" />
     <Compile Include="SyntaxTree\Visitors\StructuralErrors.cs" />
     <Compile Include="SyntaxTree\Visitors\StructureValidator.cs" />
     <Compile Include="SyntaxTree\Visitors\StructureValidatorOptions.cs" />
