--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -49,6 +49,7 @@
     <Compile Include="SyntaxTree\Abstract\ArrayConstant.cs" />
     <Compile Include="SyntaxTree\Abstract\ArrayTypeDeclaration.cs" />
     <Compile Include="SyntaxTree\Abstract\BinaryOperator.cs" />
+    <Compile Include="SyntaxTree\Abstract\ClassOfTypeDeclaration.cs" />
     <Compile Include="SyntaxTree\Abstract\ExpressionKind.cs" />
     <Compile Include="SyntaxTree\Abstract\CompilationUnit.cs" />
     <Compile Include="SyntaxTree\Abstract\CompilationUnitType.cs" />
@@ -60,6 +61,7 @@
     <Compile Include="SyntaxTree\Abstract\DeclaredSymbols.cs" />
     <Compile Include="SyntaxTree\Abstract\DeclaredType.cs" />
     <Compile Include="SyntaxTree\Abstract\ExpressionBase.cs" />
+    <Compile Include="SyntaxTree\Abstract\FileTypeDeclaration.cs" />
     <Compile Include="SyntaxTree\Abstract\IExpressionTarget.cs" />
     <Compile Include="SyntaxTree\Abstract\ISymbolTable.cs" />
     <Compile Include="SyntaxTree\Abstract\ISymbolTableEntry.cs" />
@@ -69,6 +71,7 @@
     <Compile Include="SyntaxTree\Abstract\ProjectRoot.cs" />
     <Compile Include="SyntaxTree\Abstract\RecordConstant.cs" />
     <Compile Include="SyntaxTree\Abstract\RecordConstantItem.cs" />
+    <Compile Include="SyntaxTree\Abstract\SetTypeDeclaration.cs" />
     <Compile Include="SyntaxTree\Abstract\StructTypeMode.cs" />
     <Compile Include="SyntaxTree\Abstract\StructuredType.cs" />
     <Compile Include="SyntaxTree\Abstract\SymbolAttribute.cs" />
