--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -75,6 +75,7 @@
     <Compile Include="SyntaxTree\Abstract\ITypeSpecification.cs" />
     <Compile Include="SyntaxTree\Abstract\ITypeTarget.cs" />
     <Compile Include="SyntaxTree\Abstract\MetaType.cs" />
+    <Compile Include="SyntaxTree\Abstract\PointerToType.cs" />
     <Compile Include="SyntaxTree\Abstract\ProjectRoot.cs" />
     <Compile Include="SyntaxTree\Abstract\RecordConstant.cs" />
     <Compile Include="SyntaxTree\Abstract\RecordConstantItem.cs" />
