--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -39,6 +39,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="project.json" />
+    <Compile Include="SyntaxTree\Abstract\BlockOfAssemblerStatements.cs" />
     <Compile Include="SyntaxTree\Abstract\BlockOfStatements.cs" />
     <Compile Include="SyntaxTree\Abstract\IStatementTarget.cs" />
     <Compile Include="SyntaxTree\Abstract\ParameterTypeDefinition.cs" />
@@ -90,6 +91,7 @@
     <Compile Include="SyntaxTree\Abstract\RecordConstantItem.cs" />
     <Compile Include="SyntaxTree\Abstract\SetTypeDeclaration.cs" />
     <Compile Include="SyntaxTree\Abstract\EnumType.cs" />
+    <Compile Include="SyntaxTree\Abstract\StatementBase.cs" />
     <Compile Include="SyntaxTree\Abstract\StructTypeMode.cs" />
     <Compile Include="SyntaxTree\Abstract\StructuredType.cs" />
     <Compile Include="SyntaxTree\Abstract\SubrangeType.cs" />
