--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -102,6 +102,8 @@
     <Compile Include="SyntaxTree\Abstract\StructureFieldDefinition.cs" />
     <Compile Include="SyntaxTree\Abstract\StructureFields.cs" />
     <Compile Include="SyntaxTree\Abstract\StructureProperty.cs" />
+    <Compile Include="SyntaxTree\Abstract\StructurePropertyAccessor.cs" />
+    <Compile Include="SyntaxTree\Abstract\StructurePropertyAccessorKind.cs" />
     <Compile Include="SyntaxTree\Abstract\StructurePropertyDefinition.cs" />
     <Compile Include="SyntaxTree\Abstract\SubrangeType.cs" />
     <Compile Include="SyntaxTree\Abstract\SymbolAttribute.cs" />
