--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -42,6 +42,7 @@
     <None Include="project.json" />
     <Compile Include="SyntaxTree\Abstract\BlockOfAssemblerStatements.cs" />
     <Compile Include="SyntaxTree\Abstract\BlockOfStatements.cs" />
+    <Compile Include="SyntaxTree\Abstract\CombinedSymbolTableBase.cs" />
     <Compile Include="SyntaxTree\Abstract\IStatementTarget.cs" />
     <Compile Include="SyntaxTree\Abstract\MemberVisibility.cs" />
     <Compile Include="SyntaxTree\Abstract\MethodDirective.cs" />
@@ -138,6 +139,7 @@
     <Compile Include="SyntaxTree\Standard\AsmStatement.cs" />
     <Compile Include="SyntaxTree\Standard\AsmExpression.cs" />
     <Compile Include="SyntaxTree\Standard\AsmTerm.cs" />
+    <Compile Include="SyntaxTree\Standard\ClassDeclarationMode.cs" />
     <Compile Include="SyntaxTree\Standard\FormalParameterDefinition.cs" />
     <Compile Include="SyntaxTree\Standard\GenericNamespaceName.cs" />
     <Compile Include="SyntaxTree\Standard\LocalAsmLabel.cs" />
