--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -43,8 +43,11 @@
     <Compile Include="SyntaxTree\Abstract\BlockOfAssemblerStatements.cs" />
     <Compile Include="SyntaxTree\Abstract\BlockOfStatements.cs" />
     <Compile Include="SyntaxTree\Abstract\CombinedSymbolTableBase.cs" />
+    <Compile Include="SyntaxTree\Abstract\GlobalMethod.cs" />
+    <Compile Include="SyntaxTree\Abstract\IDeclaredSymbolTarget.cs" />
     <Compile Include="SyntaxTree\Abstract\IStatementTarget.cs" />
     <Compile Include="SyntaxTree\Abstract\MemberVisibility.cs" />
+    <Compile Include="SyntaxTree\Abstract\MethodDeclaration.cs" />
     <Compile Include="SyntaxTree\Abstract\MethodDirective.cs" />
     <Compile Include="SyntaxTree\Abstract\MethodDirectiveKind.cs" />
     <Compile Include="SyntaxTree\Abstract\ParameterTypeDefinition.cs" />
@@ -106,7 +109,6 @@
     <Compile Include="SyntaxTree\Abstract\StructureFields.cs" />
     <Compile Include="SyntaxTree\Abstract\StructureMethod.cs" />
     <Compile Include="SyntaxTree\Abstract\StructureMethodDefinition.cs" />
-    <Compile Include="SyntaxTree\Abstract\StructureMethodKind.cs" />
     <Compile Include="SyntaxTree\Abstract\StructureMethodResolution.cs" />
     <Compile Include="SyntaxTree\Abstract\StructureMethodResolutionDefinition.cs" />
     <Compile Include="SyntaxTree\Abstract\StructureMethodResolutionKind.cs" />
