--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -43,6 +43,7 @@
     <Compile Include="SyntaxTree\Abstract\BlockOfAssemblerStatements.cs" />
     <Compile Include="SyntaxTree\Abstract\BlockOfStatements.cs" />
     <Compile Include="SyntaxTree\Abstract\CombinedSymbolTableBase.cs" />
+    <Compile Include="SyntaxTree\Abstract\DeclaredSymbolGroup.cs" />
     <Compile Include="SyntaxTree\Abstract\GlobalMethod.cs" />
     <Compile Include="SyntaxTree\Abstract\IDeclaredSymbolTarget.cs" />
     <Compile Include="SyntaxTree\Abstract\IStatementTarget.cs" />
@@ -131,6 +132,8 @@
     <Compile Include="SyntaxTree\Abstract\UnitMode.cs" />
     <Compile Include="SyntaxTree\Abstract\RequiredUnitName.cs" />
     <Compile Include="SyntaxTree\Abstract\RequiredUnitNameList.cs" />
+    <Compile Include="SyntaxTree\Abstract\VariableDeclaration.cs" />
+    <Compile Include="SyntaxTree\Abstract\VariableName.cs" />
     <Compile Include="SyntaxTree\Abstract\VariableValue.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\IfDirective.cs" />
     <Compile Include="SyntaxTree\Standard\AsmBlock.cs" />
