--- a/PasPasPas.Parsing/project.lock.json
+++ b/PasPasPas.Parsing/project.lock.json
@@ -15613,7 +15613,7 @@
       "projectName": "PasPasPas.Parsing",
       "projectPath": "C:\\Users\\basti\\Documents\\Visual Studio 2017\\Projects\\paspaspas\\paspaspas\\PasPasPas.Parsing\\PasPasPas.Parsing.csproj",
       "projectJsonPath": "C:\\Users\\basti\\Documents\\Visual Studio 2017\\Projects\\paspaspas\\paspaspas\\PasPasPas.Parsing\\project.json",
-      "outputType": "UAP",
+      "projectStyle": "ProjectJson",
       "frameworks": {
         "dotnet5.0": {
           "projectReferences": {
