extended var declaration support

--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -135,6 +135,7 @@
     <Compile Include="SyntaxTree\Abstract\VariableDeclaration.cs" />
     <Compile Include="SyntaxTree\Abstract\VariableName.cs" />
     <Compile Include="SyntaxTree\Abstract\VariableValue.cs" />
+    <Compile Include="SyntaxTree\Abstract\VariableValueKind.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\IfDirective.cs" />
     <Compile Include="SyntaxTree\Standard\AsmBlock.cs" />
     <Compile Include="SyntaxTree\Standard\AsmFactor.cs" />
