--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -44,6 +44,7 @@
     <Compile Include="SyntaxTree\Abstract\BlockOfStatements.cs" />
     <Compile Include="SyntaxTree\Abstract\CombinedSymbolTableBase.cs" />
     <Compile Include="SyntaxTree\Abstract\DeclaredSymbolGroup.cs" />
+    <Compile Include="SyntaxTree\Abstract\ExportedMethodDeclaration.cs" />
     <Compile Include="SyntaxTree\Abstract\GlobalMethod.cs" />
     <Compile Include="SyntaxTree\Abstract\IDeclaredSymbolTarget.cs" />
     <Compile Include="SyntaxTree\Abstract\IStatementTarget.cs" />
