changed record definition parsing

--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -153,6 +153,7 @@
     <Compile Include="SyntaxTree\Standard\GenericNamespaceName.cs" />
     <Compile Include="SyntaxTree\Standard\LocalAsmLabel.cs" />
     <Compile Include="SyntaxTree\Standard\Parameter.cs" />
+    <Compile Include="SyntaxTree\Standard\RecordDeclarationMode.cs" />
     <Compile Include="SyntaxTree\Standard\TypeName.cs" />
     <Compile Include="SyntaxTree\Abstract\DeclarationMode.cs" />
     <Compile Include="SyntaxTree\VisitorHelper.cs" />
